--- a/Check_Services.ipynb
+++ b/Check_Services.ipynb
@@ -46,14 +46,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 22,
    "id": "967881f2-94f5-4124-8ba5-a0209c9db4b6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9f73804d3ad14af4a96c65120007c4cb",
+       "model_id": "f43dc439465c4da5b3be27aeb673ea10",
        "version_major": 2,
        "version_minor": 0
       },
@@ -67,7 +67,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8aa5457fe9614ab8b61611fc17b8c2e3",
+       "model_id": "9c6cf46d33694c808d0ee0b3c77ee7e1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -81,12 +81,26 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6c2e751df11b48be816c8a27765b3716",
+       "model_id": "7e9e78ab7d95416db7933487d2e8615f",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Output()"
+       "Button(description='Clear output', style=ButtonStyle())"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "44c21a66b3814c19a8aa634d16e97948",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output(layout=Layout(border_bottom='1px solid black', border_left='1px solid black', border_right='1px solid b…"
       ]
      },
      "metadata": {},
@@ -100,7 +114,7 @@
     "import aiohttp\n",
     "from http.client import HTTPConnection\n",
     "from urllib.parse import urlparse\n",
-    "\n",
+    "import ipywidgets\n",
     "\n",
     "async def site_is_online_async(url, timeout,username,password):\n",
     "    \"\"\"Return True if the target URL is online.\n",
@@ -205,13 +219,21 @@
     "                \n",
     "    raise error\n",
     "    \n",
-    "def display_check_result(latency_ns, url, error=\"\"):\n",
+    "out1 = ipywidgets.Output(layout={'border': '1px solid black'})   \n",
+    "\n",
+    "#@out1.capture()    \n",
+    "def display_check_result(latency_ns, url, error):\n",
     "    \"\"\"Display the result of a connectivity check.\"\"\"\n",
-    "    print(f'The status of \"{url}\" is:', end=\" \")\n",
+    "    #print(f'The status of \"{url}\" is:', end=\" \")\n",
+    "    out1.append_stdout('\\n')\n",
+    "    out1.append_stdout(f'The status of \"{url}\" is:')\n",
+    "    \n",
     "    if (latency_ns):\n",
-    "        print(f'\"Online!\" 👍, latency: {latency_ns*10e-9}s')\n",
+    "        #print(f'\"Online!\" 👍, latency: {latency_ns*10e-9}s')\n",
+    "        out1.append_stdout(f'\"Online!\" 👍, latency: {latency_ns*10e-9}s')\n",
     "    else:\n",
-    "        print(f'\"Offline?\" 👎 \\n  Error: \"{error}\"')\n",
+    "        #print(f'\"Offline?\" 👎 \\n  Error: \"{error}\"')\n",
+    "        out1.append_stdout(f'\"Offline?\" 👎 \\n  Error: \"{error}\"')\n",
     "\n",
     "\n",
     "async def _asynchronous_check(urls,timeout,username,password):\n",
@@ -245,70 +267,35 @@
     "        print('Starting new event loop')\n",
     "        result = asyncio.run(_asynchronous_check(urls,timeout,username,password))\n",
     "        \n",
-    "        \n",
-    "import ipywidgets\n",
+    "\n",
     "username = ipywidgets.Text(description='User:', placeholder='Введите здесь имя Ext-....')\n",
     "password = ipywidgets.Password(description='Password:', placeholder='Введите здесь пароль')\n",
-    "button = widgets.Button(description=\"Start tracing!\")\n",
-    "output = widgets.Output()\n",
+    "sButton = ipywidgets.Button(description=\"Start tracing!\")\n",
+    "cBbutton = ipywidgets.Button(description=\"Clear output\")\n",
     "\n",
-    "def on_button_clicked(b):\n",
-    "    with output:\n",
-    "        output.append_stdout('!!!!')\n",
-    "        check(timeout=15, urls=[\"http://scanme.nmap.org\",     # HTTP via aiohttp \n",
-    "                                \"ssh://scanme.nmap.org\",      # SSH via asyncssh \n",
-    "                                \"raw://scanme.nmap.org:22\",   # RAW 22/tcp    open     ssh\n",
-    "                                \"raw://scanme.nmap.org:53\",   # RAW 53/tcp    open     domain\n",
-    "                                \"raw://scanme.nmap.org:80\",   # RAW 80/tcp    open     http\n",
-    "                                \"raw://scanme.nmap.org:2323\", # RAW 2323/tcp  filtered 3d-nfsd\n",
-    "                                \"raw://scanme.nmap.org:5555\", # RAW 5555/tcp  filtered freeciv\n",
-    "                                \"raw://scanme.nmap.org:9929\", # RAW 9929/tcp  open     nping-echo\n",
-    "                                \"raw://scanme.nmap.org:31337\" # RAW 31337/tcp open     Elite\n",
-    "                               ],\n",
-    "             username=username.value,password=password.value)        \n",
     "\n",
-    "button.on_click(on_button_clicked)\n",
+    "def on_sButton_clicked(b):\n",
+    "    out1.append_stdout(f'{time.time()} - Start tracing!\\n')\n",
+    "    check(timeout=15, urls=[\"http://scanme.nmap.org\",     # HTTP via aiohttp \n",
+    "                            \"ssh://scanme.nmap.org\",      # SSH via asyncssh \n",
+    "                             \"raw://scanme.nmap.org:22\",   # RAW 22/tcp    open     ssh\n",
+    "                             \"raw://scanme.nmap.org:53\",   # RAW 53/tcp    open     domain\n",
+    "                             \"raw://scanme.nmap.org:80\",   # RAW 80/tcp    open     http\n",
+    "                             \"raw://scanme.nmap.org:2323\", # RAW 2323/tcp  filtered 3d-nfsd\n",
+    "                             \"raw://scanme.nmap.org:5555\", # RAW 5555/tcp  filtered freeciv\n",
+    "                             \"raw://scanme.nmap.org:9929\", # RAW 9929/tcp  open     nping-echo\n",
+    "                             \"raw://scanme.nmap.org:31337\" # RAW 31337/tcp open     Elite\n",
+    "                           ],\n",
+    "          username=username.value,password=password.value)        \n",
     "\n",
-    "display(widgets.VBox([username,password]),button,output)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
-   "id": "aaf9f4e5-01cf-4c0f-bec5-60712092e589",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The status of \"raw://scanme.nmap.org:53\" is: \"Online!\" 👍, latency: 1.6971295800000001s\n",
-      "The status of \"raw://scanme.nmap.org:22\" is: \"Online!\" 👍, latency: 3.58058042s\n",
-      "The status of \"raw://scanme.nmap.org:80\" is: \"Online!\" 👍, latency: 3.6086375s\n",
-      "The status of \"raw://scanme.nmap.org:31337\" is: \"Online!\" 👍, latency: 3.68452459s\n",
-      "The status of \"raw://scanme.nmap.org:9929\" is: \"Online!\" 👍, latency: 3.686105s\n",
-      "The status of \"http://scanme.nmap.org\" is: \"Online!\" 👍, latency: 4.32768417s\n",
-      "The status of \"ssh://scanme.nmap.org\" is: \"Offline?\" 👎 \n",
-      "  Error: \"Permission denied\"\n",
-      "The status of \"raw://scanme.nmap.org:2323\" is: \"Offline?\" 👎 \n",
-      "  Error: \"Multiple exceptions: [Errno 111] Connect call failed ('45.33.32.156', 2323), [Errno 99] Cannot assign requested address\"\n",
-      "The status of \"raw://scanme.nmap.org:5555\" is: \"Offline?\" 👎 \n",
-      "  Error: \"Multiple exceptions: [Errno 111] Connect call failed ('45.33.32.156', 5555), [Errno 99] Cannot assign requested address\"\n"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "id": "7f9bbdd1-7808-4d7a-b195-a59680cc1cca",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import time\n",
-    "time.sleep(1)\n",
-    "check(timeout=3,urls=[],username='',password='')"
+    "def on_cButton_clicked(b):\n",
+    "    out1.clear_output()\n",
+    "                \n",
+    "sButton.on_click(on_sButton_clicked)\n",
+    "cBbutton.on_click(on_cButton_clicked)\n",
+    "\n",
+    "display(ipywidgets.VBox([username,password]),sButton,cBbutton)\n",
+    "display(out1)"
    ]
   }
  ],
