--- a/Check_Services.ipynb
+++ b/Check_Services.ipynb
@@ -46,14 +46,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "id": "967881f2-94f5-4124-8ba5-a0209c9db4b6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f43dc439465c4da5b3be27aeb673ea10",
+       "model_id": "3b1be86143004ee5b30914a4d5b0949c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -67,12 +67,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9c6cf46d33694c808d0ee0b3c77ee7e1",
+       "model_id": "6c6419a72e9f462cb889d75b54c7df8c",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Button(description='Start tracing!', style=ButtonStyle())"
+       "HBox(children=(Button(description='Start tracing!', style=ButtonStyle()), Button(description='Clear output', s…"
       ]
      },
      "metadata": {},
@@ -81,21 +81,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7e9e78ab7d95416db7933487d2e8615f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Button(description='Clear output', style=ButtonStyle())"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "44c21a66b3814c19a8aa634d16e97948",
+       "model_id": "885a7cd23a3a431dbaa1e66d7538b41e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -271,11 +257,11 @@
     "username = ipywidgets.Text(description='User:', placeholder='Введите здесь имя Ext-....')\n",
     "password = ipywidgets.Password(description='Password:', placeholder='Введите здесь пароль')\n",
     "sButton = ipywidgets.Button(description=\"Start tracing!\")\n",
-    "cBbutton = ipywidgets.Button(description=\"Clear output\")\n",
+    "cButton = ipywidgets.Button(description=\"Clear output\")\n",
     "\n",
     "\n",
     "def on_sButton_clicked(b):\n",
-    "    out1.append_stdout(f'{time.time()} - Start tracing!\\n')\n",
+    "    out1.append_stdout(f'\\n{time.time()} - Start tracing!\\n')\n",
     "    check(timeout=15, urls=[\"http://scanme.nmap.org\",     # HTTP via aiohttp \n",
     "                            \"ssh://scanme.nmap.org\",      # SSH via asyncssh \n",
     "                             \"raw://scanme.nmap.org:22\",   # RAW 22/tcp    open     ssh\n",
@@ -292,10 +278,33 @@
     "    out1.clear_output()\n",
     "                \n",
     "sButton.on_click(on_sButton_clicked)\n",
-    "cBbutton.on_click(on_cButton_clicked)\n",
+    "cButton.on_click(on_cButton_clicked)\n",
     "\n",
-    "display(ipywidgets.VBox([username,password]),sButton,cBbutton)\n",
+    "display(ipywidgets.VBox([username,password]),ipywidgets.HBox([sButton,cButton]))\n",
     "display(out1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0804db69-e572-4c50-9a81-90cf509b04e9",
+   "metadata": {},
+   "source": [
+    "## Пример выполнения однократной трассировки\n",
+    "\n",
+    "1676530666.5861719 - Start tracing!\n",
+    "\n",
+    "The status of \"raw://scanme.nmap.org:53\" is:\"Online!\" 👍, latency: 0.32056959s\n",
+    "The status of \"raw://scanme.nmap.org:31337\" is:\"Online!\" 👍, latency: 2.0859241600000002s\n",
+    "The status of \"raw://scanme.nmap.org:9929\" is:\"Online!\" 👍, latency: 2.16059916s\n",
+    "The status of \"raw://scanme.nmap.org:80\" is:\"Online!\" 👍, latency: 2.1979604200000002s\n",
+    "The status of \"raw://scanme.nmap.org:22\" is:\"Online!\" 👍, latency: 2.26143375s\n",
+    "The status of \"http://scanme.nmap.org\" is:\"Online!\" 👍, latency: 3.99740042s\n",
+    "The status of \"ssh://scanme.nmap.org\" is:\"Offline?\" 👎 \n",
+    "  Error: \"Permission denied\"\n",
+    "The status of \"raw://scanme.nmap.org:2323\" is:\"Offline?\" 👎 \n",
+    "  Error: \"Multiple exceptions: [Errno 111] Connect call failed ('45.33.32.156', 2323), [Errno 99] Cannot assign requested address\"\n",
+    "The status of \"raw://scanme.nmap.org:5555\" is:\"Offline?\" 👎 \n",
+    "  Error: \"Multiple exceptions: [Errno 111] Connect call failed ('45.33.32.156', 5555), [Errno 99] Cannot assign requested address\""
    ]
   }
  ],
