Update Check Services with beacons - template.ipynb

--- a/Check Services with beacons - template.ipynb
+++ b/Check Services with beacons - template.ipynb
@@ -296,7 +296,7 @@
     "    \n",
     "def beacons_discovery_callback(discovery_value_list):\n",
     "    progress.value = 1.0\n",
-    "    discovery_value_list = [False,True]\n",
+    "    ## discovery_value_list = [False,True]\n",
     "    if len(discovery_value_list) > 0: \n",
     "            if (True in discovery_value_list):\n",
     "                   sButton.disabled=False\n",
