Correct layout and style of the output widget, increase timeout of regular tracing and tracing of beacons

--- a/Check Services with beacons - template.ipynb
+++ b/Check Services with beacons - template.ipynb
@@ -3,8 +3,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e265f046-306d-4c67-9e58-8d3cb0a50adc",
+   "id": "46cbcc71-797f-49d5-866c-e8098af07755",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "pip install sqlalchemy==2.0 psycopg psycopg[binary,pool]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e265f046-306d-4c67-9e58-8d3cb0a50adc",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import time\n",
@@ -121,7 +133,12 @@
     "                \n",
     "    raise error\n",
     "    \n",
-    "out_box = ipywidgets.Output(layout={'border': '2px solid black'})   \n",
+    "#out_box = ipywidgets.Output(layout={'border': '2px solid black', 'overflow':'visible'},width='100px')   \n",
+    "\n",
+    "out_box = ipywidgets.Output(layout=ipywidgets.Layout(width='100%',\n",
+    "                                           height='auto',\n",
+    "                                           max_height='300px',\n",
+    "                                           overflow='hidden scroll',border ='2px solid gray'))\n",
     "\n",
     "    \n",
     "def display_check_result(link, latency_ns, error, sink, agent_token):\n",
@@ -240,7 +257,7 @@
     "    resultSet = session.execute(text(\n",
     "                                        f''' \n",
     "                                        SELECT url, role_name, service_name, link_id, role_id, is_beacon\n",
-    "                                        FROM dbo.eligible_links where role_name in ('{role.value}')\n",
+    "                                        FROM dbo.eligible_links where role_name in ('{role.value}') \n",
     "                                        ''')\n",
     "                                )\n",
     "    out_box.append_stdout(f'\\n{resultSet} - resultSet done!\\n') \n",
@@ -253,7 +270,7 @@
     "    \n",
     "    out_box.append_stdout(f'\\nAgent_token:{engine.url.username}\\n') \n",
     "    \n",
-    "    check(timeout=3, links=eligible_links,\n",
+    "    check(timeout=15, links=eligible_links,\n",
     "          username=username.value,password=password.value, \n",
     "          sink=session, agent_token=engine.url.username,\n",
     "          callback_proc = lambda lmd: [out_box.append_stdout(f'\\nTracing of services: done with result={lmd.result()}  << return _asynchronous_check()\\n'),\n",
@@ -350,7 +367,7 @@
     "    \n",
     "    #check_beacon_visibility(timeout=1, links=eligible_links,\n",
     "        \n",
-    "    check(timeout=1, links=eligible_links,\n",
+    "    check(timeout=3, links=eligible_links,\n",
     "          username=username.value,password=password.value, \n",
     "          sink=session, agent_token=engine.url.username,\n",
     "          callback_proc = lambda lmd: [out_box.append_stdout(f'\\nBeacons discovery: done with result={lmd.result()}  << return _asynchronous_check()\\n'),\n",
