misprint corrected with exceptions

--- a/Check Services with beacons - template.ipynb
+++ b/Check Services with beacons - template.ipynb
@@ -12,12 +12,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "e265f046-306d-4c67-9e58-8d3cb0a50adc",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a1fd3f2705eb4fb79cf3d73c7b3d348e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(Text(value='', description='User:', placeholder='Введите имя пользователя'), Password(descripti…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7418b51933fd4bdfa9fa3c3499cb7cf9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(Button(description='Beacons', icon='check', style=ButtonStyle(), tooltip='Check beacons visibil…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b18215d4fe1442afbeb6262338bcb062",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(FloatProgress(value=0.0, max=1.0),))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "15f7171a75534a188ec442cf3803a782",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output(layout=Layout(border_bottom='2px solid gray', border_left='2px solid gray', border_right='2px solid gra…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import time\n",
     "import asyncio\n",
@@ -47,7 +104,7 @@
     "                return True\n",
     "            except asyncio.TimeoutError:\n",
     "                error = Exception(\"timed out\")\n",
-    "            except (asyncssh.Error) as e:\n",
+    "            except Exception as e:\n",
     "                error = e\n",
     "                \n",
     "    if parser.scheme in (\"ssh\"):\n",
@@ -65,7 +122,7 @@
     "                return True\n",
     "        except asyncio.TimeoutError:\n",
     "                error = Exception(\"timed out\")\n",
-    "        except (asyncssh.Error) as e:\n",
+    "        except Exception as e:\n",
     "                error = e\n",
     "                \n",
     "    if parser.scheme in (\"postgre\"):                \n",
@@ -86,7 +143,7 @@
     "            return True\n",
     "        except asyncio.TimeoutError:\n",
     "                error = Exception(\"timed out\")\n",
-    "        except (asyncssh.Error) as e:\n",
+    "        except Exception as e:\n",
     "                error = e\n",
     "                \n",
     "    if parser.scheme in (\"kafka\"):                \n",
@@ -107,7 +164,7 @@
     "            return True\n",
     "        except asyncio.TimeoutError:\n",
     "                error = Exception(\"timed out\")\n",
-    "        except (asyncssh.Error) as e:\n",
+    "        except Exception as e:\n",
     "                error = e\n",
     "                \n",
     "    if parser.scheme in (\"raw\"):                \n",
@@ -128,7 +185,7 @@
     "            return True\n",
     "        except asyncio.TimeoutError:\n",
     "                error = Exception(\"timed out\")\n",
-    "        except (asyncssh.Error) as e:\n",
+    "        except Exception as e:\n",
     "                error = e                \n",
     "                \n",
     "    raise error\n",
